--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/inter": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.2.1",
-    "@mui/material": "^6.2.1",
+    "@mui/joy": "^5.0.0-beta.51",
+    "@mui/material": "^6.3.0",
+    "@mui/styled-engine": "^6.3.0",
     "@mui/styled-engine-sc": "^6.2.1",
+    "@mui/system": "^6.3.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/react-router-dom": "^5.3.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.0.0",
+    "lucide-react": "^0.469.0",
+    "next": "^15.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.0",
