--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/joy": "^5.0.0-beta.51",
+    "@mui/lab": "^6.0.0-beta.21",
     "@mui/material": "^6.3.0",
     "@mui/styled-engine": "^6.3.0",
     "@mui/styled-engine-sc": "^6.2.1",
