--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.0",
+    "redux-logger": "3.0.6",
     "styled-components": "^6.1.13",
     "typescript": "~4.1.5",
     "web-vitals": "^2.1.4"
@@ -34,7 +35,8 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18"
+    "@types/react-dom": "^18.2.18",
+    "@types/redux-logger": "^3.0.13"
   },
   "scripts": {
     "start": "react-scripts start",
