--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/axios": "^0.14.4",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "0.27.2",
     "lucide-react": "^0.469.0",
     "next": "^15.1.2",
     "react": "^19.0.0",
