--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.0",
     "redux-logger": "3.0.6",
     "styled-components": "^6.1.13",
+    "sweetalert2": "11.4.23",
     "typescript": "~4.1.5",
     "web-vitals": "^2.1.4"
   },
