--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "styled-components": "^6.1.13",
     "sweetalert2": "11.4.23",
     "typescript": "~4.1.5",
+    "universal-cookie": "4.0.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
