--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "redux-logger": "3.0.6",
     "styled-components": "^6.1.13",
     "sweetalert2": "11.4.23",
-    "typescript": "~4.1.5",
+    "typescript": "^5.7.2",
     "universal-cookie": "4.0.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "@types/redux-logger": "^3.0.13"
   },
   "scripts": {
